2005-08-20 Borut Razem <borut.razem AT siol.net>

	* emu/rrgb/Makefile: link with libsocket in case of sparc-solaris
	* emu/rrgb/main.c: don't include getopt.h if __sun__ (sparc-solaris)